--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <div>First Git Class</div>
-    <h1>hi</h1>
+    <div>hello world!</div>
 </body>
 </html>
